[package]
name = "gh-pr-comments"
version = "0.1.0"
edition = "2021"
author = "Paul Adenot <padenot@mozilla.com>"
description = "Fetch GitHub comments and print them to the terminal, as markdown"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.0"
url = "2.0"
git2 = "0.18"
anyhow = "1.0"
